start of server
